# eventcam_triangulacao

./: CMakeLists.txt  README.md  controlIO.cpp  control_hardware.cpp  control_triangulacao.cpp  conv_camera.cpp  event_camera.cpp  params_triangulacao.json  settings.json  triangulacao.cpp  tst.cpp
include/: controlIO.h  control_hardware.h  control_triangulacao.h  conv_camera.h  event_camera.h  parametros.h
